<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/pink_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imagenLibro"
                android:layout_width="117dp"
                android:layout_height="130dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.054"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textTitulo"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/titulo"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toEndOf="@+id/imagenLibro"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textAutor"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/autor_libro"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toEndOf="@+id/imagenLibro"
                app:layout_constraintTop_toBottomOf="@+id/textTitulo"
                app:layout_constraintVertical_bias="0.081" />

            <TextView
                android:id="@+id/textTipo"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tipo_libro"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toEndOf="@+id/imagenLibro"
                app:layout_constraintTop_toBottomOf="@+id/textAutor" />

            <TextView
                android:id="@+id/textPaginas"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/paginas_libro"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toEndOf="@+id/imagenLibro"
                app:layout_constraintTop_toBottomOf="@+id/textTipo" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>