<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_A100_light"
    tools:context=".activities.LecturaInformacionActivity">

    <ImageView
        android:id="@+id/imagenInfo"
        android:layout_width="168dp"
        android:layout_height="222dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textTituloInfo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/titulo_libro"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenInfo" />

    <TextView
        android:id="@+id/textAutorInfo"
        android:layout_width="191dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:text="@string/autor"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTituloInfo" />

    <TextView
        android:id="@+id/textTipoInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:text="@string/tipo"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTituloInfo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="407dp"
        android:layout_height="402dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.Material.ProgressBar.Horizontal"
            android:layout_width="338dp"
            android:layout_height="56dp"
            android:layout_marginStart="24dp"
            android:background="@color/white"
            android:progressTint="@color/red_A100_light"
            android:scaleY="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/progreso"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textPaginasInfo"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="/1000"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.033"
            app:layout_constraintStart_toEndOf="@+id/editTextPaginasLeidas"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <Button
            android:id="@+id/botonEditar"
            android:layout_width="38dp"
            android:layout_height="37dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/ic_editar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textPaginasInfo"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/botonAgregarLeido"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/agregar_leido"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.138"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPaginasLeidas" />

        <Button
            android:id="@+id/botonAgregarLeyendo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/agregar_leyendo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.137"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botonAgregarLeido" />

        <Button
            android:id="@+id/botonBorrar"
            android:layout_width="52dp"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_borrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.892"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botonAgregarLeyendo"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextPaginasLeidas"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>